# ordgeo

./: CMakeLists.txt  README.md
docker/: Dockerfile
include/ordgeo/: ordgeo.hpp
include/ordgeo/core/: triplets.hpp
include/ordgeo/embed/: cmp.hpp  dlib_opt.hpp  embed.hpp
include/ordgeo/io/: io.hpp
include/ordgeo/linalg/: linalg.hpp
src/: CMakeLists.txt
src/lib/core/: triplets.cpp
src/lib/embed/: dlib_opt.cpp  embed.cpp  embed_cmp_with_soe.cpp
src/lib/io/: csv.cpp  io.cpp  svmlight.cpp
src/lib/linalg/: linalg.cpp
src/tools/soe/: soe.cpp
